--- a/documentation/components/RepeatIconComponent.html
+++ b/documentation/components/RepeatIconComponent.html
@@ -61,9 +61,16 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/repeat-icon/repeat-icon.component.ts</code>
+    <code>src/app/icons/repeat-icon/repeat-icon.component.ts</code>
 </p>
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Componente que nos permite repetir un icono n vces y activar los primeros iconos</p>
+
+    </p>
 
 
     <p class="comment">
@@ -91,12 +98,12 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>rclt-repeat-icon</code></td>
+                <td class="col-md-9"><code>ngx-utilitario-repeat-icon</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./repeat-icon.component.css</code></td>
+                <td class="col-md-9"><code>./repeat-icon.component.scss</code></td>
             </tr>
 
 
@@ -122,20 +129,6 @@
     <table class="table table-sm table-bordered index-table">
         <tbody>
 
-                <tr>
-                    <td class="col-md-4">
-                        <h6><b>Methods</b></h6>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <ul class="index-list">
-                            <li>
-                                <a href="#ngOnInit">ngOnInit</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
 
                 <tr>
                     <td class="col-md-4">
@@ -171,24 +164,6 @@
     </table>
 </section>
 
-    <section>
-    <h3 id="constructor">Constructor</h3>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-<code>constructor()</code>
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/repeat-icon/repeat-icon.component.ts:14</a></div>
-                            </td>
-                        </tr>
-
-            </tbody>
-        </table>
-</section>
 
     <section>
     <h3 id="inputs">Inputs</h3>
@@ -207,9 +182,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/repeat-icon/repeat-icon.component.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/icons/repeat-icon/repeat-icon.component.ts:18</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Cantidad de iconos a activar</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-sm table-bordered">
@@ -227,9 +208,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/repeat-icon/repeat-icon.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/icons/repeat-icon/repeat-icon.component.ts:26</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Color del icono normalmente por defecto es #000</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-sm table-bordered">
@@ -247,9 +234,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/repeat-icon/repeat-icon.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/icons/repeat-icon/repeat-icon.component.ts:30</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>COlor del icono activo por defecto es #000</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-sm table-bordered">
@@ -267,9 +260,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/repeat-icon/repeat-icon.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/icons/repeat-icon/repeat-icon.component.ts:22</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Icono a mostrar utilizo font-awesome</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-sm table-bordered">
@@ -287,80 +286,64 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/repeat-icon/repeat-icon.component.ts:10</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/icons/repeat-icon/repeat-icon.component.ts:14</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Cantidad de veces a repetir el icono</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
 
 
 
-    <section>
-    
-    <h3 id="methods">
-        Methods
-    </h3>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="ngOnInit"></a>
-                    <span class="name">
-                        <b>
-                            ngOnInit
-                        </b>
-                        <a href="#ngOnInit"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>ngOnInit()</code>
-                </td>
-            </tr>
 
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="16"
-                            class="link-to-prism">src/app/repeat-icon/repeat-icon.component.ts:16</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</section>
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input } from &#x27;@angular/core&#x27;;
-
+/**
+ * Componente que nos permite repetir un icono n vces y activar los primeros iconos
+ */
 @Component({
-  selector: &#x27;rclt-repeat-icon&#x27;,
+  selector: &#x27;ngx-utilitario-repeat-icon&#x27;,
   templateUrl: &#x27;./repeat-icon.component.html&#x27;,
-  styleUrls: [&#x27;./repeat-icon.component.css&#x27;]
+  styleUrls: [&#x27;./repeat-icon.component.scss&#x27;]
 })
 export class RepeatIconComponent implements OnInit {
-
+  /**
+   * Cantidad de veces a repetir el icono
+   */
   @Input() repetir &#x3D; 5;
+  /**
+   * Cantidad de iconos a activar
+   */
   @Input() activo &#x3D; 0;
+  /**
+   * Icono a mostrar utilizo font-awesome
+   */
   @Input() icono &#x3D; &#x27;fa fa-user&#x27;;
+  /**
+   * Color del icono normalmente por defecto es #000
+   */
   @Input() color &#x3D; &#x27;#000&#x27;;
+  /**
+   * COlor del icono activo por defecto es #000
+   */
   @Input() colorActivo &#x3D; &#x27;#000&#x27;;
+  /**
+   * @ignore
+   */
   constructor() { }
+  /**
+   * @ignore
+   */
   ngOnInit() {
   }
 }
@@ -369,14 +352,14 @@ export class RepeatIconComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;ng-container class&#x3D;&quot;repetirIcono&quot;&gt;
-    &lt;i *ngFor&#x3D;&quot;let item of activo | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;colorActivo&quot;&gt;&lt;/i&gt;
-    &lt;i *ngFor&#x3D;&quot;let item of (repetir - activo) | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;color&quot;&gt;&lt;/i&gt;
+  &lt;em *ngFor&#x3D;&quot;let item of activo | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;colorActivo&quot;&gt;&lt;/em&gt;
+  &lt;em *ngFor&#x3D;&quot;let item of (repetir - activo) | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;color&quot;&gt;&lt;/em&gt;
 &lt;/ng-container&gt;</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./repeat-icon.component.css</code>
+                    <code>./repeat-icon.component.scss</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss">.repetirIcono{
     display: inline-flex;
@@ -408,8 +391,8 @@ export class RepeatIconComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><ng-container class="repetirIcono">    <i *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></i>    <i *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></i></ng-container></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+        var COMPONENT_TEMPLATE = '<div><ng-container class="repetirIcono">  <em *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></em>  <em *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></em></ng-container></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'ngx-utilitario-modal'},{'name': 'RepeatIconComponent', 'selector': 'ngx-utilitario-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'RepeatIconComponent'};
 </script>
