--- a/documentation/components/AppComponent.html
+++ b/documentation/components/AppComponent.html
@@ -85,7 +85,7 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>clt-root</code></td>
+                <td class="col-md-9"><code>ngx-utilitario-app</code></td>
             </tr>
 
             <tr>
@@ -399,10 +399,10 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
-import { ModalService } from &#x27;./modal/modal.service&#x27;;
+import { ModalService } from &#x27;./modal/services/modal.service&#x27;;
 
 @Component({
-  selector: &#x27;clt-root&#x27;,
+  selector: &#x27;ngx-utilitario-app&#x27;,
   templateUrl: &#x27;./app.component.html&#x27;,
   styleUrls: [&#x27;./app.component.css&#x27;]
 })
@@ -429,119 +429,7 @@ export class AppComponent {
   &lt;p&gt;Se usa bootsrap y fontawesome para estilo e iconos&lt;/p&gt;
   &lt;p&gt;Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente &lt;/p&gt;
 &lt;/div&gt;
-&lt;!-- 
-&lt;div class&#x3D;&quot;row&quot;&gt;
-  &lt;rclt-cards class&#x3D;&quot;col-2&quot; titulo&#x3D;&quot;Mi Perfil&quot; subtitulo&#x3D;&quot;Editar&quot; color&#x3D;&quot;#fd3212&quot;&gt;&lt;/rclt-cards&gt;
-  &lt;div class&#x3D;&quot;col-10&quot;&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class&#x3D;&quot;row&quot;&gt;
-  &lt;rclt-cards-img-text class&#x3D;&quot;col-12&quot; titulo&#x3D;&quot;Mi Perfil&quot; subtitulo&#x3D;&quot;Editar&quot; color&#x3D;&quot;#fd3212&quot;&gt;&lt;/rclt-cards-img-text&gt;
-&lt;/div&gt;
-&lt;div class&#x3D;&quot;row&quot;&gt;
-  &lt;rclt-cards-img-text-ndiv class&#x3D;&quot;col-12&quot; titulo&#x3D;&quot;Mi Perfil&quot; subtitulo&#x3D;&quot;Editar&quot; color&#x3D;&quot;#fd3212&quot;
-    [contenido]&#x3D;&quot;[1,1,1,&#x27;content&#x27;]&quot;&gt;
-    &lt;rclt-repeat-icon class&#x3D;&quot;col-12&quot; activo&#x3D;2 color&#x3D;&quot;#9c9c9c&quot; colorActivo&#x3D;&quot;#f2c231&quot; icono&#x3D;&quot;fa fa-star&quot;&gt;
-    &lt;/rclt-repeat-icon&gt;
-  &lt;/rclt-cards-img-text-ndiv&gt;
-&lt;/div&gt;
-&lt;div class&#x3D;&quot;container-fluid&quot;&gt;
-  &lt;rclt-repeat-icon class&#x3D;&quot;col-12&quot; activo&#x3D;2 color&#x3D;&quot;#9c9c9c&quot; colorActivo&#x3D;&quot;#f2c231&quot; icono&#x3D;&quot;fa fa-star&quot;&gt;&lt;/rclt-repeat-icon&gt;
-&lt;/div&gt; --&gt;
-
-&lt;!-- 
-&lt;div class&#x3D;&quot;jumbotron&quot;&gt;menu&lt;/div&gt;
-&lt;rclt-menu-dot&gt;&lt;/rclt-menu-dot&gt; --&gt;
-&lt;!-- 
-&lt;div class&#x3D;&quot;jumbotron&quot;&gt;FormControl&lt;/div&gt;
-&lt;div class&#x3D;&quot;container-fluid&quot;&gt;
-  &lt;rclt-input class&#x3D;&quot;col-4&quot;&gt;&lt;/rclt-input&gt;
-&lt;/div&gt;
-
-&lt;div class&#x3D;&quot;container-fluid&quot;&gt;
-  &lt;ngx-utilitario-chat&gt;&lt;/ngx-utilitario-chat&gt;
-&lt;/div&gt;
-
-&lt;div class&#x3D;&quot;container-fluid&quot;&gt;
-  &lt;h1&gt;Modal&lt;/h1&gt;
-  &lt;button (click)&#x3D;&quot;openModal(&#x27;custom-modal-1&#x27;)&quot;&gt;Open Modal 1&lt;/button&gt;
-  &lt;button (click)&#x3D;&quot;openModal(&#x27;custom-modal-2&#x27;)&quot;&gt;Open Modal 2&lt;/button&gt;
-&lt;/div&gt;
-&lt;rclt-modal id&#x3D;&quot;custom-modal-1&quot;&gt;
-  &lt;div&gt;
-    &lt;h1&gt;A Custom Angular 7 Modal!&lt;/h1&gt;
-    &lt;p&gt;Home page text: &lt;input type&#x3D;&quot;text&quot; /&gt;&lt;/p&gt;
-    &lt;button (click)&#x3D;&quot;closeModal(&#x27;custom-modal-1&#x27;);&quot;&gt;Close&lt;/button&gt;
-  &lt;/div&gt;
-&lt;/rclt-modal&gt;
-&lt;rclt-modal id&#x3D;&quot;custom-modal-2&quot;&gt;
-  &lt;h1 style&#x3D;&quot;height: 1000px; width: 800px&quot;&gt;A Custom Angular 7 Modal!&lt;/h1&gt;
-  &lt;h1&gt;A Tall Custom Modal!&lt;/h1&gt;
-  &lt;button (click)&#x3D;&quot;closeModal(&#x27;custom-modal-2&#x27;);&quot;&gt;Close&lt;/button&gt;
-&lt;/rclt-modal&gt;
-&lt;div class&#x3D;&quot;jumbotron&quot;&gt;
-  &lt;h1&gt;pipes&lt;/h1&gt;
-  &lt;h3&gt;| numberToArray&#x27;&lt;/h3&gt;
-&lt;/div&gt;
-&lt;ul&gt;
-  &lt;li&gt;Method First Using PIPE&lt;/li&gt;
-  &lt;li *ngFor&#x3D;&#x27;let key of 5 | numberToArray&#x27;&gt;
-    {{key}}
-  &lt;/li&gt;
-&lt;/ul&gt;
-&lt;div class&#x3D;&quot;container-fluid&quot;&gt;
-
-  &lt;h3&gt;Basic Buttons&lt;/h3&gt;
-  &lt;div class&#x3D;&quot;example-button-row&quot;&gt;
-    &lt;button mat-button&gt;Basic&lt;/button&gt;
-    &lt;button mat-button color&#x3D;&quot;primary&quot;&gt;Primary&lt;/button&gt;
-    &lt;button mat-button color&#x3D;&quot;accent&quot;&gt;Accent&lt;/button&gt;
-    &lt;button mat-button color&#x3D;&quot;warn&quot;&gt;Warn&lt;/button&gt;
-    &lt;button mat-button disabled&gt;Disabled&lt;/button&gt;
-    &lt;a mat-button routerLink&#x3D;&quot;.&quot;&gt;Link&lt;/a&gt;
-  &lt;/div&gt;
-
-  &lt;h3&gt;Raised Buttons&lt;/h3&gt;
-  &lt;div class&#x3D;&quot;example-button-row&quot;&gt;
-    &lt;button mat-raised-button&gt;Basic&lt;/button&gt;
-    &lt;button mat-raised-button color&#x3D;&quot;primary&quot;&gt;Primary&lt;/button&gt;
-    &lt;button mat-raised-button color&#x3D;&quot;accent&quot;&gt;Accent&lt;/button&gt;
-    &lt;button mat-raised-button color&#x3D;&quot;warn&quot;&gt;Warn&lt;/button&gt;
-    &lt;button mat-raised-button disabled&gt;Disabled&lt;/button&gt;
-    &lt;a mat-raised-button routerLink&#x3D;&quot;.&quot;&gt;Link&lt;/a&gt;
-  &lt;/div&gt;
-
-  &lt;h3&gt;Stroked Buttons&lt;/h3&gt;
-  &lt;div class&#x3D;&quot;example-button-row&quot;&gt;
-    &lt;button mat-stroked-button&gt;Basic&lt;/button&gt;
-    &lt;button mat-stroked-button color&#x3D;&quot;primary&quot;&gt;Primary&lt;/button&gt;
-    &lt;button mat-stroked-button color&#x3D;&quot;accent&quot;&gt;Accent&lt;/button&gt;
-    &lt;button mat-stroked-button color&#x3D;&quot;warn&quot;&gt;Warn&lt;/button&gt;
-    &lt;button mat-stroked-button disabled&gt;Disabled&lt;/button&gt;
-    &lt;a mat-stroked-button routerLink&#x3D;&quot;.&quot;&gt;Link&lt;/a&gt;
-  &lt;/div&gt;
-
-  &lt;h3&gt;Flat Buttons&lt;/h3&gt;
-  &lt;div class&#x3D;&quot;example-button-row&quot;&gt;
-    &lt;button mat-flat-button&gt;Basic&lt;/button&gt;
-    &lt;button mat-flat-button color&#x3D;&quot;primary&quot;&gt;Primary&lt;/button&gt;
-    &lt;button mat-flat-button color&#x3D;&quot;accent&quot;&gt;Accent&lt;/button&gt;
-    &lt;button mat-flat-button color&#x3D;&quot;warn&quot;&gt;Warn&lt;/button&gt;
-    &lt;button mat-flat-button disabled&gt;Disabled&lt;/button&gt;
-    &lt;a mat-flat-button routerLink&#x3D;&quot;.&quot;&gt;Link&lt;/a&gt;
-  &lt;/div&gt;
-
-  &lt;h3&gt;Alternativo tema&lt;/h3&gt;
-  &lt;div class&#x3D;&quot;tBusca-tema&quot;&gt;
-    &lt;div class&#x3D;&quot;example-button-row&quot;&gt;
-      &lt;button mat-raised-button&gt;Basic&lt;/button&gt;
-      &lt;button mat-raised-button color&#x3D;&quot;primary&quot;&gt;Primary&lt;/button&gt;
-      &lt;button mat-raised-button color&#x3D;&quot;accent&quot;&gt;Accent&lt;/button&gt;
-      &lt;button mat-raised-button color&#x3D;&quot;warn&quot;&gt;Warn&lt;/button&gt;
-      &lt;button mat-raised-button disabled&gt;Disabled&lt;/button&gt;
-      &lt;a mat-raised-button routerLink&#x3D;&quot;.&quot;&gt;Link&lt;/a&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-&lt;/div&gt; --&gt;</code></pre>
+</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
@@ -579,8 +467,8 @@ export class AppComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!--The content below is only a placeholder and can be replaced.--><div class="jumbotron">  <h1 class="display-4">Welcome to ngx-utilitario-renatoclt!</h1>  <p class="lead">Estos son los componentes que tienene esta libreria.</p>  <p>Se usa bootsrap y fontawesome para estilo e iconos</p>  <p>Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente </p></div><!-- <div class="row">  <rclt-cards class="col-2" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards>  <div class="col-10"></div></div><div class="row">  <rclt-cards-img-text class="col-12" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards-img-text></div><div class="row">  <rclt-cards-img-text-ndiv class="col-12" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"    [contenido]="[1,1,1,\'content\']">    <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star">    </rclt-repeat-icon>  </rclt-cards-img-text-ndiv></div><div class="container-fluid">  <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon></div> --><!-- <div class="jumbotron">menu</div><rclt-menu-dot></rclt-menu-dot> --><!-- <div class="jumbotron">FormControl</div><div class="container-fluid">  <rclt-input class="col-4"></rclt-input></div><div class="container-fluid">  <ngx-utilitario-chat></ngx-utilitario-chat></div><div class="container-fluid">  <h1>Modal</h1>  <button (click)="openModal(\'custom-modal-1\')">Open Modal 1</button>  <button (click)="openModal(\'custom-modal-2\')">Open Modal 2</button></div><rclt-modal id="custom-modal-1">  <div>    <h1>A Custom Angular 7 Modal!</h1>    <p>Home page text: <input type="text" /></p>    <button (click)="closeModal(\'custom-modal-1\');">Close</button>  </div></rclt-modal><rclt-modal id="custom-modal-2">  <h1 style="height: 1000px; width: 800px">A Custom Angular 7 Modal!</h1>  <h1>A Tall Custom Modal!</h1>  <button (click)="closeModal(\'custom-modal-2\');">Close</button></rclt-modal><div class="jumbotron">  <h1>pipes</h1>  <h3>| numberToArray\'</h3></div><ul>  <li>Method First Using PIPE</li>  <li *ngFor=\'let key of 5 | numberToArray\'>    {{key}}  </li></ul><div class="container-fluid">  <h3>Basic Buttons</h3>  <div class="example-button-row">    <button mat-button>Basic</button>    <button mat-button color="primary">Primary</button>    <button mat-button color="accent">Accent</button>    <button mat-button color="warn">Warn</button>    <button mat-button disabled>Disabled</button>    <a mat-button routerLink=".">Link</a>  </div>  <h3>Raised Buttons</h3>  <div class="example-button-row">    <button mat-raised-button>Basic</button>    <button mat-raised-button color="primary">Primary</button>    <button mat-raised-button color="accent">Accent</button>    <button mat-raised-button color="warn">Warn</button>    <button mat-raised-button disabled>Disabled</button>    <a mat-raised-button routerLink=".">Link</a>  </div>  <h3>Stroked Buttons</h3>  <div class="example-button-row">    <button mat-stroked-button>Basic</button>    <button mat-stroked-button color="primary">Primary</button>    <button mat-stroked-button color="accent">Accent</button>    <button mat-stroked-button color="warn">Warn</button>    <button mat-stroked-button disabled>Disabled</button>    <a mat-stroked-button routerLink=".">Link</a>  </div>  <h3>Flat Buttons</h3>  <div class="example-button-row">    <button mat-flat-button>Basic</button>    <button mat-flat-button color="primary">Primary</button>    <button mat-flat-button color="accent">Accent</button>    <button mat-flat-button color="warn">Warn</button>    <button mat-flat-button disabled>Disabled</button>    <a mat-flat-button routerLink=".">Link</a>  </div>  <h3>Alternativo tema</h3>  <div class="tBusca-tema">    <div class="example-button-row">      <button mat-raised-button>Basic</button>      <button mat-raised-button color="primary">Primary</button>      <button mat-raised-button color="accent">Accent</button>      <button mat-raised-button color="warn">Warn</button>      <button mat-raised-button disabled>Disabled</button>      <a mat-raised-button routerLink=".">Link</a>    </div>  </div></div> --></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+        var COMPONENT_TEMPLATE = '<div><!--The content below is only a placeholder and can be replaced.--><div class="jumbotron">  <h1 class="display-4">Welcome to ngx-utilitario-renatoclt!</h1>  <p class="lead">Estos son los componentes que tienene esta libreria.</p>  <p>Se usa bootsrap y fontawesome para estilo e iconos</p>  <p>Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente </p></div></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'ngx-utilitario-modal'},{'name': 'RepeatIconComponent', 'selector': 'ngx-utilitario-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'AppComponent'};
 </script>
