--- a/documentation/components/CardsImgTextNdivComponent.html
+++ b/documentation/components/CardsImgTextNdivComponent.html
@@ -561,7 +561,7 @@ export class CardsImgTextNdivComponent implements OnInit {
     <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;cards row row-no-padding&quot; [style.color]&#x3D;&quot;color&quot; (click)&#x3D;&quot;clickCard($event)&quot;&gt;
     &lt;div class&#x3D;&quot;col-2 float-left&quot;&gt;
-        &lt;img class&#x3D;&quot;cardsImagen&quot; src&#x3D;{{imagen}}  [style.height]&#x3D;&quot;height&quot;/&gt;
+        &lt;img class&#x3D;&quot;cardsImagen&quot; src&#x3D;{{imagen}} alt&#x3D;&quot;imagen de card cambiar a dinamico&quot; [style.height]&#x3D;&quot;height&quot;/&gt;
     &lt;/div&gt;
     &lt;div class&#x3D;&quot;col-{{10 - contenido.length }} float-left&quot;&gt;
         &lt;div [ngClass]&#x3D;&quot;classTexto&quot;&gt;
@@ -591,7 +591,7 @@ export class CardsImgTextNdivComponent implements OnInit {
     display: table !important;
     -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); */
     -moz-transition: 0.5s ease;
     -webkit-transition: 0.5s ease;
     transition: 0.5s ease;
@@ -685,8 +685,8 @@ export class CardsImgTextNdivComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="cards row row-no-padding" [style.color]="color" (click)="clickCard($event)">    <div class="col-2 float-left">        <img class="cardsImagen" src={{imagen}}  [style.height]="height"/>    </div>    <div class="col-{{10 - contenido.length }} float-left">        <div [ngClass]="classTexto">            <h2 class="cardsTitulo" [style.color]="color">{{titulo}}</h2>            <h3 class="cardsDescripcion">{{descripcion}}</h3>            <h3 class="cardsEtiqueta" [style.background]="color">{{etiqueta}}</h3>            <h3 class="cardsContenido"><ng-content></ng-content></h3>        </div>    </div>    <div *ngFor="let item of contenido" class="col-1 float-left center-middle" [style.line-height]="height">        <ng-content *ngIf="item===\'content\'"></ng-content>        <span *ngIf="item!==\'content\'">{{item}}</span>    </div></div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+        var COMPONENT_TEMPLATE = '<div><div class="cards row row-no-padding" [style.color]="color" (click)="clickCard($event)">    <div class="col-2 float-left">        <img class="cardsImagen" src={{imagen}} alt="imagen de card cambiar a dinamico" [style.height]="height"/>    </div>    <div class="col-{{10 - contenido.length }} float-left">        <div [ngClass]="classTexto">            <h2 class="cardsTitulo" [style.color]="color">{{titulo}}</h2>            <h3 class="cardsDescripcion">{{descripcion}}</h3>            <h3 class="cardsEtiqueta" [style.background]="color">{{etiqueta}}</h3>            <h3 class="cardsContenido"><ng-content></ng-content></h3>        </div>    </div>    <div *ngFor="let item of contenido" class="col-1 float-left center-middle" [style.line-height]="height">        <ng-content *ngIf="item===\'content\'"></ng-content>        <span *ngIf="item!==\'content\'">{{item}}</span>    </div></div></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'ngx-utilitario-modal'},{'name': 'RepeatIconComponent', 'selector': 'ngx-utilitario-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'CardsImgTextNdivComponent'};
 </script>
