--- a/documentation/components/ChatComponent.html
+++ b/documentation/components/ChatComponent.html
@@ -71,6 +71,7 @@
     </p>
     <p class="comment">
                     <code><a href="https://angular.io/api/core/OnInit" target="_blank" >OnInit</a></code>
+                    <code><a href="https://angular.io/api/core/OnChanges" target="_blank" >OnChanges</a></code>
     </p>
 
 
@@ -237,7 +238,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">src/app/chat/chat/chat.component.ts:68</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">src/app/chat/chat/chat.component.ts:87</a></div>
                             </td>
                         </tr>
 
@@ -275,7 +276,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">src/app/chat/chat/chat.component.ts:57</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">src/app/chat/chat/chat.component.ts:76</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -301,7 +302,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">src/app/chat/chat/chat.component.ts:54</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">src/app/chat/chat/chat.component.ts:73</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -325,7 +326,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">src/app/chat/chat/chat.component.ts:68</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">src/app/chat/chat/chat.component.ts:87</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -346,7 +347,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">src/app/chat/chat/chat.component.ts:66</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="85" class="link-to-prism">src/app/chat/chat/chat.component.ts:85</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -367,7 +368,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">src/app/chat/chat/chat.component.ts:67</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">src/app/chat/chat/chat.component.ts:86</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -388,7 +389,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">src/app/chat/chat/chat.component.ts:65</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="84" class="link-to-prism">src/app/chat/chat/chat.component.ts:84</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -423,8 +424,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="114"
-                            class="link-to-prism">src/app/chat/chat/chat.component.ts:114</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="132"
+                            class="link-to-prism">src/app/chat/chat/chat.component.ts:132</a></div>
                 </td>
             </tr>
 
@@ -489,8 +490,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="95"
-                            class="link-to-prism">src/app/chat/chat/chat.component.ts:95</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="113"
+                            class="link-to-prism">src/app/chat/chat/chat.component.ts:113</a></div>
                 </td>
             </tr>
 
@@ -559,8 +560,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="90"
-                            class="link-to-prism">src/app/chat/chat/chat.component.ts:90</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="108"
+                            class="link-to-prism">src/app/chat/chat/chat.component.ts:108</a></div>
                 </td>
             </tr>
 
@@ -629,8 +630,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="109"
-                            class="link-to-prism">src/app/chat/chat/chat.component.ts:109</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="127"
+                            class="link-to-prism">src/app/chat/chat/chat.component.ts:127</a></div>
                 </td>
             </tr>
 
@@ -668,8 +669,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="104"
-                            class="link-to-prism">src/app/chat/chat/chat.component.ts:104</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="122"
+                            class="link-to-prism">src/app/chat/chat/chat.component.ts:122</a></div>
                 </td>
             </tr>
 
@@ -734,8 +735,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="77"
-                            class="link-to-prism">src/app/chat/chat/chat.component.ts:77</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="96"
+                            class="link-to-prism">src/app/chat/chat/chat.component.ts:96</a></div>
                 </td>
             </tr>
 
@@ -804,8 +805,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="74"
-                            class="link-to-prism">src/app/chat/chat/chat.component.ts:74</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="93"
+                            class="link-to-prism">src/app/chat/chat/chat.component.ts:93</a></div>
                 </td>
             </tr>
 
@@ -969,7 +970,26 @@
     estado: EEstadoChat.conectado,
     id: &#x27;1&#x27;,
     img: &#x27;fd&#x27;,
-    mensaje: [this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1],
+    mensaje: [this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1],
     nombre: &#x27;r2&#x27;,
     notificacion: 2,
     bloqueo: EBloqueoChat.desbloqueado
@@ -991,7 +1011,7 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input, Output, EventEmitter, SimpleChanges, SimpleChange } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input, Output, EventEmitter, SimpleChanges, SimpleChange, OnChanges } from &#x27;@angular/core&#x27;;
 import { IMensajeDetalle } from &#x27;../dto/imensaje-detalle&#x27;;
 import { EEstadoChat } from &#x27;../dto/eestado-chat&#x27;;
 import { EEstadoMensaje } from &#x27;../dto/eestado-mensaje&#x27;;
@@ -1005,7 +1025,7 @@ import { EBloqueoChat } from &#x27;../dto/ebloqueo-chat&#x27;;
   templateUrl: &#x27;./chat.component.html&#x27;,
   styleUrls: [&#x27;./chat.component.scss&#x27;]
 })
-export class ChatComponent implements OnInit {
+export class ChatComponent implements OnInit, OnChanges {
 
   conversacion1: IChatConversacionDetalle &#x3D; {
     estadoMensaje: EEstadoMensaje.enviado,
@@ -1039,7 +1059,26 @@ export class ChatComponent implements OnInit {
     estado: EEstadoChat.conectado,
     id: &#x27;1&#x27;,
     img: &#x27;fd&#x27;,
-    mensaje: [this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1, this.conversacion1],
+    mensaje: [this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1,
+              this.conversacion1],
     nombre: &#x27;r2&#x27;,
     notificacion: 2,
     bloqueo: EBloqueoChat.desbloqueado
@@ -1068,7 +1107,6 @@ export class ChatComponent implements OnInit {
   }
 
   ngOnChanges(changes: SimpleChanges): void {
-    const name: SimpleChange &#x3D; changes.name;
     if (changes.lista) {
       this.lista.forEach(chat &#x3D;&gt; {
         if (chat.id &#x3D;&#x3D;&#x3D; this.conversacion.id) {
@@ -1190,7 +1228,7 @@ export class ChatComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><div class="row row-no-padding ngx-utilitario-chat">  <div class="col-4">    <header class="header-chat">      Chats      <span class="fa fa-pencil-square-o"></span>    </header>    <ngx-utilitario-chat-busqueda></ngx-utilitario-chat-busqueda>    <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle($event)"></ngx-utilitario-chat-lista>  </div>  <div class="col-8">    <ngx-utilitario-chat-conversacion [conversacion]="conversacion" (nuevoMensaje)="enviarMensaje($event)"      (eliminarMensajes)="eliminarMensajes()" (bloquearConversacion)="bloquearChat($event)">    </ngx-utilitario-chat-conversacion>  </div></div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'ngx-utilitario-modal'},{'name': 'RepeatIconComponent', 'selector': 'ngx-utilitario-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'ChatComponent'};
 </script>
